--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
 	<string name="app_name">Boxee Thumb Remote</string>
-
+	
+	<string name="server_is_playing">Playing: <xliff:g id="title">%s</xliff:g></string>
+	
 	<string name="settings">Settings</string>
 	<string name="host_title">Host</string>
 	<string name="host_summary">Hostname of the server. Leave blank for Boxee autodiscovery.</string>
