--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
 	
 	<string name="server_is_playing">Playing: <xliff:g id="title">%s</xliff:g></string>
 	
+	<string name="exit_app">Exit</string>
 	<string name="settings">Settings</string>
 	<string name="host_title">Host</string>
 	<string name="host_summary">Hostname of the server. Leave blank for Boxee autodiscovery.</string>
