--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,4 +54,12 @@
     
     <string name="ux_group">UX Settings</string>
     <string name="network_group">Network Settings</string>
+    
+    <!-- help -->
+    <string name="welcome_to_remote">Welcome to Boxee Thumb Remote!</string>
+    <string name="quick_overview">This is the simplest WiFi remote for Boxee you\'ll find!\nWith only your thumb, you can control your Boxee. You don\'t even have to look at the remove UI!</string>
+    <string name="swipe_help_overview">Navigation with this remote is done by swipe gestures: swipe your thumb up, to navigate up in Boxee. Swipe down to navigate down, etc. Tap to select an item in Boxee.\nSimple, ah?</string>
+    <string name="other_features_overview">There are other features too:\n * Auto detection of a Boxee server.\n * Physical BACK button is mapped to Boxee\'s BACK.\n * Android soft-keyboard will send keys to Boxee, e.g., when there is a text-box open in Boxee.\n * Automatically pauses a playing video upon a phone call!\n * And more!</string>
+    <string name="how_to_get_to_help">There are some settings (and a link to this help) from the MENU.</string>
+    <string name="close_button">Close</string>
 </resources>
