--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 A Boxee remote control application for Android (c) 2011 Menny Even-Danan. Under the Apache2 license.
 
-Using this remote control application, you'll be able to control your Boxee with just your thumb!
+Download from the Market the latest stable release: https://market.android.com/details?id=net.evendanan.android.thumbremote
 
-Note: Don't forget to setup your Boxee server address by pressing "MENU"->Settings
+Using this remote control application, you'll be able to control your Boxee with just your thumb!
 
