--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,7 @@
 	<string name="not_connected">Not connected</string>
 	<string name="connected_to">Boxee @ <xliff:g id="serverName">%s</xliff:g></string>
 	<!-- settings -->
-	<string name="custom_server">Custom server...</string>
+	<string name="custom_server">Custom server&#8230;</string>
 	<string name="host_title">Host</string>
 	<string name="port_title">Port</string>
 	<string name="clear_custom_server">Clear</string>
@@ -50,6 +50,10 @@
     <string name="network_timeout_summary">Timeout for HTTP requests in milliseconds</string>
     <string name="is_an_invalid_number"><xliff:g id="new_text">%s</xliff:g> is an invalid number</string>
     
+    <string name="network_username_title">Username</string>
+    <string name="network_username_summary">Username to use as Boxee credentials</string>
+    <string name="network_password_title">Password</string>
+    <string name="network_password_summary">Password to use as Boxee credentials</string>
     
     <!-- help -->
     <string name="welcome_to_remote">Welcome to Boxee Thumb Remote!</string>
