Added multi choose list of detected servers as new action bar menu item for quick access to switch back and forth

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -101,4 +101,5 @@
 	<string name="pause_on_call_title">Pause media on call</string>
 	<string name="pause_on_call_yes">Incoming phone calls will pause running media</string>
 	<string name="pause_on_call_no">Media will continue to run</string>
+	<string name="servers">Servers</string>
 </resources>
